Archive2/18/0014d4417ffa69/output
main.cpp:4:7: error: rvalue reference to type 'int' cannot bind to lvalue of type 'int'
int &&b = a;
      ^   ~
1 error generated.
